--- a/public/gatk-framework/pom.xml
+++ b/public/gatk-framework/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <sting.basedir>${project.basedir}/../..</sting.basedir>
         <sting.packagetests.artifactId>gatk-package</sting.packagetests.artifactId>
+        <sting.test-utils-jar.phase>${sting.jar.phase}</sting.test-utils-jar.phase>
     </properties>
 
     <dependencies>
@@ -29,7 +30,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>sting-utils</artifactId>
             <version>${project.version}</version>
-            <type>test-jar</type>
+            <classifier>test-utils</classifier>
             <scope>test</scope>
         </dependency>
 
@@ -77,66 +78,29 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
                 </executions>
             </plugin>
-            <!--
-            TODO: disable.gatk-framework.test.dependency is required because the the same test classes
-            TODO: cannot be in both the gatk-framework test artifact AND the test classes directory.
-
-            TODO: Otherwise maven throws an [ERROR] java.lang.RuntimeException: Duplicate test set
-
-            TODO: This is due to AbstractSurefireMojo.scanForTestClasses() adding both scanDirectories() and scanDependencies().
-            TODO: Pain to debug as exception is three maven invoker levels deep, outer maven, maven-inovker-plugin, then forked tests!
-
-            TODO: Move BaseTest and other non UnitTests into the sting-utils test jar/artifact.
-
-            TODO: Then that dependency won't have test classes that will also run from the gatk-framework
-            TODO: test classes directory during the invoked package test.
-            -->
+-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-invoker-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>package-unittests</id>
-                        <configuration>
-                            <properties>
-                                <disable.gatk-framework.test.dependency>true</disable.gatk-framework.test.dependency>
-                            </properties>
-                        </configuration>
                     </execution>
                     <execution>
                         <id>package-integrationtests</id>
-                        <configuration>
-                            <properties>
-                                <disable.gatk-framework.test.dependency>true</disable.gatk-framework.test.dependency>
-                            </properties>
-                        </configuration>
                     </execution>
                     <execution>
                         <id>package-largescaletests</id>
-                        <configuration>
-                            <properties>
-                                <disable.gatk-framework.test.dependency>true</disable.gatk-framework.test.dependency>
-                            </properties>
-                        </configuration>
                     </execution>
                     <execution>
                         <id>package-pipelinetests</id>
-                        <configuration>
-                            <properties>
-                                <disable.gatk-framework.test.dependency>true</disable.gatk-framework.test.dependency>
-                            </properties>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
