--- a/public/package-tests/pom.xml
+++ b/public/package-tests/pom.xml
@@ -48,6 +48,14 @@
         </dependency>
 
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>gatk-framework</artifactId>
+            <version>${project.version}</version>
+            <classifier>test-utils</classifier>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <scope>test</scope>
@@ -65,27 +73,6 @@
     </build>
 
     <profiles>
-        <!--
-        TODO: see description of disable.gatk-framework.test.dependency in gatk-framework/pom.xml
-        -->
-        <profile>
-            <id>include-gatk-framework-tests</id>
-            <activation>
-                <property>
-                    <name>disable.gatk-framework.test.dependency</name>
-                    <value>false</value>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>${project.groupId}</groupId>
-                    <artifactId>gatk-framework</artifactId>
-                    <version>${project.version}</version>
-                    <type>test-jar</type>
-                    <scope>test</scope>
-                </dependency>
-            </dependencies>
-        </profile>
         <profile>
             <id>unittests</id>
             <activation>
