Setting the test-utils' type to test-jar, such that the multi-module build uses testClasses instead of classes as a directory dependency.

--- a/public/external-example/pom.xml
+++ b/public/external-example/pom.xml
@@ -50,6 +50,7 @@
             <artifactId>sting-utils</artifactId>
             <version>${sting.version}</version>
             <classifier>test-utils</classifier>
+            <type>test-jar</type>
             <scope>test</scope>
         </dependency>
 
@@ -58,6 +59,7 @@
             <artifactId>gatk-framework</artifactId>
             <version>${sting.version}</version>
             <classifier>test-utils</classifier>
+            <type>test-jar</type>
             <scope>test</scope>
         </dependency>
 
