--- a/public/queue-framework/pom.xml
+++ b/public/queue-framework/pom.xml
@@ -67,6 +67,7 @@
             <artifactId>gatk-framework</artifactId>
             <version>${project.version}</version>
             <classifier>test-utils</classifier>
+            <type>test-jar</type>
             <scope>test</scope>
         </dependency>
 
