--- a/public/package-tests/pom.xml
+++ b/public/package-tests/pom.xml
@@ -52,6 +52,7 @@
             <artifactId>gatk-framework</artifactId>
             <version>${project.version}</version>
             <classifier>test-utils</classifier>
+            <type>test-jar</type>
             <scope>test</scope>
         </dependency>
 
