--- a/public/sting-root/pom.xml
+++ b/public/sting-root/pom.xml
@@ -60,6 +60,12 @@
                 <groupId>net.sf</groupId>
                 <artifactId>sam</artifactId>
                 <version>1.104.1628</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.testng</groupId>
+                        <artifactId>testng</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>net.sf</groupId>
